making folder struct for modular monoloth app

--- a/src/oapi_codegen/tmf638v5/TMF638-Service_Inventory_Management-v5.0.0.oas.yaml
+++ b/src/oapi_codegen/tmf638v5/TMF638-Service_Inventory_Management-v5.0.0.oas.yaml
@@ -247,7 +247,7 @@ paths:
         - $ref: '#/components/parameters/Id'
         - $ref: '#/components/parameters/Fields'
       requestBody:
-        $ref: '#/components/requestBodies/Service_MVO'
+#        $ref: '#/components/requestBodies/Service_MVO'
       responses:
         '200':
           $ref: '#/components/responses/200Service_Patch'
