--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -39,7 +39,7 @@ tasks:
   swagger.gen.tmf638.v4_2:
     desc: Generate Go code
     cmds:
-      - GOFLAGS=-mod=mod go generate github.com/MxelA/tmf-service-go github.com/MxelA/tmf-service-go/pkg/swagger/tmf641v4_1
+      - GOFLAGS=-mod=mod go generate github.com/MxelA/tmf-service github.com/MxelA/tmf-service/internal/tmf-service-inventory/swagger/tmf638v4_2
   oapi-codegen.gen.v5:
     desc: Generate Go code
     cmds:
