--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,11 +26,11 @@ tasks:
     cmds:
       - GOOS=linux GOARCH=386 go build -o bin/tmf-service-linux-386 src/main.go
 
-  run:
+  run.web-run server:
     desc: Run the app
     cmds:
       - GOFLAGS=-mod=mod go build -o bin/tmf-service main.go
-      - GOFLAGS=-mod=mod go run main.go
+      - GOFLAGS=-mod=mod go run main.go web-server
 
   swagger.doc.tmf638.v4_0:
     desc: "Swagger Documentation for TMF638 v4.0 "
