--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,13 @@ NEO4j_DB_HOST=neo4j://localhost
 NEO4j_DB_PORT=7687
 NEO4j_DB_USERNAME=neo4j
 NEO4j_DB_PASSWORD=password
+
+MONGO_DB_HOST="127.0.0.1"
+MONGO_DB_PORT="27017"
+MONGO_DB_USERNAME="admin"
+MONGO_DB_PASSWORD="password"
+MONGO_DB_DATABASE="tmf-service"
+
+MONGO_EXPRESS_USERNAME="admin"
+MONGO_EXPRESS_PASSWORD="password"
+MONGO_EXPRESS_PORT="8082"
