--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mongo-express:
     image: mongo-express
@@ -13,3 +11,21 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_EXPRESS_PASSWORD}
     ports:
       - ${MONGO_EXPRESS_PORT}:8081
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.53
+    container_name: jaeger
+    restart: unless-stopped
+    ports:
+      - "5775:5775/udp"   # agent compact thrift
+      - "6831:6831/udp"   # agent binary thrift
+      - "6832:6832/udp"   # agent compact thrift
+      - "5778:5778"       # agent HTTP
+      - "16686:16686"     # Jaeger UI
+      - "4318:4318"       # collector HTTP endpoint
+      - "14250:14250"     # collector gRPC endpoint
+      - "9411:9411"       # Zipkin compatible
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+      - COLLECTOR_OTLP_ENABLED=true
+      - LOG_LEVEL=debug
